--- a/angular.json
+++ b/angular.json
@@ -52,7 +52,21 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
+            },
+            "api": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.api.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -65,6 +79,9 @@
             },
             "development": {
               "buildTarget": "cogni-uc:build:development"
+            },
+            "api": {
+              "buildTarget": "cogni-uc:build:api"
             }
           },
           "defaultConfiguration": "development"
